Fix generation race
